[gd_scene load_steps=4 format=3 uid="uid://cult5pickc1hw"]

[ext_resource type="Script" uid="uid://csvhywhk8g8lh" path="res://scenes/main_menu.gd" id="1_hb7w4"]
[ext_resource type="Texture2D" uid="uid://jocfv8j21a55" path="res://art/main menu.png" id="2_tm74w"]
[ext_resource type="PackedScene" uid="uid://k2f2m56ajwsd" path="res://scenes/MooseButton.tscn" id="3_bqqt6"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hb7w4")
gameScene = "res://scenes/game.tscn"
infoScene = "res://scenes/game_info.tscn"

[node name="BackgroundImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tm74w")
expand_mode = 3

[node name="StartButton" parent="." instance=ExtResource("3_bqqt6")]
offset_left = 78.0
offset_top = 356.0
offset_right = 217.0
offset_bottom = 423.0

[node name="Quit" parent="." instance=ExtResource("3_bqqt6")]
offset_left = 299.0
offset_top = 349.0
offset_right = 438.0
offset_bottom = 416.0
text = "QUIT"

[node name="InfoButton" parent="." instance=ExtResource("3_bqqt6")]
offset_left = 559.0
offset_top = 351.0
offset_right = 869.0
offset_bottom = 418.0
text = "HOW TO PLAY"

[node name="OptionsButton" parent="." instance=ExtResource("3_bqqt6")]
offset_left = 241.0
offset_top = 443.0
offset_right = 380.0
offset_bottom = 510.0
text = "OPTIONS"

[node name="MuteButton" parent="." instance=ExtResource("3_bqqt6")]
offset_left = 512.0
offset_top = 442.0
offset_right = 651.0
offset_bottom = 509.0
text = "MUTE
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_mute_pressed"]
